--- a/index.html
+++ b/index.html
@@ -9,7 +9,13 @@
 <body>
     <img src="#">
     <script>
-        
+        const img = document.querySelector('img')
+        fetch('https://api.giphy.com/v1/gifs/translate?api_key=jWd7HkgR1P1A2dOxpycwD4RHJMtgwzMf&s=cats', {mode : 'cors'}).then(function(response){
+            return response.json()
+        })
+        .then(function(response){
+            img.src = response.data.images.original.url
+        })
     </script>
 </body>
 </html>
