Search box working

--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <script src="script.js" defer></script>
 </head>
 <body>
+    <div class="main-container"></div>
     <img src="#">
+    <input type="text" id="gifSearch" autocomplete="off">
+    <button class="search">Search</button>
 </body>
 </html>
