Fixed style, added readme file, to implement catch

--- a/index.html
+++ b/index.html
@@ -9,9 +9,12 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="main-container"></div>
-    <img src="#">
-    <input type="text" id="gifSearch" autocomplete="off">
-    <button class="search">Search</button>
+    <div class="main-container">
+        <div class="gif-container">
+            <img src="#">
+            <input type="text" id="gifSearch" autocomplete="off">
+            <button class="search">Search</button>
+        </div>
+    </div>s
 </body>
 </html>
