--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
 </head>
 <body>
     <div class="main-container">
+        
         <div class="gif-container">
+            <h1>Search a GIF!</h1>
             <img src="#">
             <input type="text" id="gifSearch" autocomplete="off">
             <button class="search">Search</button>
