--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class="gif-container">
             <h1>Search a GIF!</h1>
             <img src="#">
-            <input type="text" id="gifSearch" autocomplete="off">
+            <input type="text" id="gifSearch" placeholder="Search a gif!" autocomplete="off">
             <button class="search">Search</button>
         </div>
     </div>s
