Added catch method

--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
             <img src="#">
             <input type="text" id="gifSearch" placeholder="Search a gif!" autocomplete="off">
             <button class="search">Search</button>
+            <span id="error-container"></span>
         </div>
-    </div>s
+    </div>
 </body>
 </html>
